--- a/components/backend-tests-dotnet-basic-ekpmfthg/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-dotnet-basic-ekpmfthg/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-dotnet-basic-ekpmfthg
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-dotnet-basic-ekpmfthg:b3a5160b538c0d5b205dd5ff72d0cff56c9b1315@sha256:c7ea80a21e498dd3ee27c6108db7ca56d878451552bfceac90ca6125a7ff1148
+          name: container-image
